Get rid of various ErrorProne / NullAway / Sonar compiler warnings (#10396)